# VIdor

.qwen/: settings.json
vidor-app/: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  setup.sh
vidor-app/backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  config.json  vcpkg.json
vidor-app/backend/db/: init.sql
vidor-app/backend/include/: config.h  jwt_utils.h  logger.h  room_manager.h  server.h  signaling_handler.h  voice_proxy.h
vidor-app/backend/src/: config.cpp  jwt_utils.cpp  logger.cpp  main.cpp  room_manager.cpp  server.cpp  signaling_handler.cpp  voice_proxy.cpp
vidor-app/backend/tests/: basic_tests.cpp
vidor-app/coturn/: turnserver.conf
vidor-app/frontend/: .env.example  .eslintrc.cjs  .gitignore  DESIGN_SYSTEM.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
vidor-app/frontend/src/: App.tsx  index.css  vite-env.d.ts
vidor-app/frontend/src/components/: ChatPanel.tsx  ConnectionStatus.tsx  ControlBar.tsx  Layout.tsx  ThemeToggle.tsx  TranscriptionPanel.tsx  VideoGrid.tsx
vidor-app/frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  Toast.tsx  index.ts
vidor-app/frontend/src/contexts/: ThemeContext.tsx
vidor-app/frontend/src/hooks/: useConferenceRoom.ts  useTextToSpeech.ts  useVoiceTranscription.ts
vidor-app/frontend/src/pages/: JoinRoom.tsx  LandingPage.tsx  Settings.tsx
vidor-app/frontend/src/services/: apiClient.ts  signalingService.ts
vidor-app/frontend/src/stores/: webrtcStore.ts
vidor-app/frontend/src/test/: setup.ts
vidor-app/shared/: api-types.ts  env-schema.ts
